# chill-vibe

./: .aider.conf.yml  .chillvibe_logs.jsonl  .gitignore  README.md  chill-vibe.py  codebase_context.txt  gptme.toml  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: python-tests.yml
examples/python_pytest/: .chillvibe.yaml
src/chill_vibe/: budget.py  cli.py  config.py  constants.py  context.py  doctor.py  execution.py  memory.py  models.py  preflight.py  pricing.py  reasoning.py  rules.py
tests/: test_args.py  test_budget_dynamic.py  test_chill_vibe.py  test_config_hierarchy.py  test_doctor.py  test_enhanced_features.py  test_grounded_recovery.py  test_invariants.py  test_memory.py  test_mypy_verification.py  test_parsing.py  test_rollback.py
