[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chill-vibe"
version = "0.1.1"
authors = [
  { name="Tom Wolfe" },
]
description = "A Reasoning-to-Code CLI pipeline"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "google-genai",
    "pyyaml",
    "git-dump @ git+https://github.com/tomwolfe/git_dump.git",
    "pytest",
    "pydantic>=2.0.0",
    "mypy",
    "types-PyYAML"
]

[project.scripts]
chill-vibe = "chill_vibe.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.ruff]
line-length = 120
target-version = "py38"
